tests/types/errors/bitwise_float_operand.mog
var value f64 = 1.0
print(value | 1)
